Added all and clean of all subproject to root project. Raised MaxPermSize setting required to run Scala.